--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "history": "^1.17.0",
+    "react-router": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
