--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "canvas-particle-network": "^1.5.0",
     "history": "^1.17.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
