--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "flux": "^3.1.3",
     "history": "^1.17.0",
     "react": "^15.6.1",
