--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "flux": "^3.1.3",
     "canvas-particle-network": "^1.5.0",
+    "flux": "^3.1.3",
     "history": "^1.17.0",
+    "imports-loader": "^0.7.1",
+    "inline-console": "^1.0.15",
+    "jquery.terminal": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
