--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "js-algorithms",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://www.simeonlees.co.uk/js-algorithms/",
   "dependencies": {
     "axios": "^0.16.2",
     "canvas-particle-network": "^1.5.0",
